// [START declaration]
syntax = "proto3";

import "google/protobuf/struct.proto";

package seldon.protos;
// [END declaration]


// [START java_declaration]
option java_package = "io.seldon.protos";
option java_outer_classname = "PredictionProtos";
// [END java_declaration]


// [START messages]

// [START default data]

message Tensor {
  repeated int32 shape = 1 [packed=true];
  repeated double values = 2 [packed=true];
}

message DefaultData {
  repeated string names = 1;
  oneof data_oneof {
    Tensor tensor = 2;
    google.protobuf.ListValue ndarray = 3;
  }
}

// [END default data]

// [START Meta]

message Meta {
  string puid = 1; 
  map<string,google.protobuf.Value> tags = 2;
  map<string,int32> routing = 3;
  OutlierStatus outlierStatus = 4;  
}

// [END Meta]


// [START Message]

message Message {

  Status status = 1;
  Meta meta = 2;
  oneof data_oneof {
    DefaultData data = 3;
    bytes binData = 4;
    string strData = 5;
  }
}

message Status {

    enum StatusFlag {
        SUCCESS = 0;
        FAILURE = 1;
    }

    int32 code = 1;
    string info = 2;
    string reason = 3;
    StatusFlag status = 4;
}

// [END Message]


// [START Feedback]

message Feedback {
  Message request = 1;
  Message response = 2;
  float reward = 3;
  Message truth = 4;
}

// [END Feedback]


// [START RequestResponse]

message RequestResponse {
  Message request = 1;
  Message response = 2;
}

// [END RequestResponse]


// [START Plugin Specific Messages]

message OutlierStatus{
    bool isOutlier = 1;
    double score = 2;
}

// [END Plugin Specific Messages]

// [END Messages]


// [START Services]

service Model {
  rpc Predict(Message) returns (Message) {};
  rpc SendFeedback(Feedback) returns (Message) {};
 }

service Router {
  rpc Route(Message) returns (Message) {};
  rpc SendFeedback(Feedback) returns (Message) {};
 }

service Transformer {
  rpc Transform(Message) returns (Message) {};
 }

// [END Services]
